force-app/main/default/objects/Drug_Test_History__c/Drug_Test_History__c.object-meta.xml
<CustomObject>
    <label>Drug Test History</label>
    <nameField>
        <displayFormat>DrugTestHistory-{0000}</displayFormat>
        <label>Drug Test History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drug Test History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>