force-app/main/default/objects/Drug_Test_History__c/fields/Detected_Substances__c.field-meta.xml
<CustomField>
    <fullName>Detected_Substances__c</fullName>
    <label>Detected Substances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>AMP - Amphetamines</fullName>
            </value>
            <value>
                <fullName>COC - Cocaine</fullName>
            </value>
            <value>
                <fullName>OPI - Opiates</fullName>
            </value>
            <value>
                <fullName>PCP - Phencyclidine</fullName>
            </value>
            <value>
                <fullName>THC - Marijuana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>