force-app/main/default/objects/Drug_Test_History__c/fields/Drug_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test_Date__c</fullName>
    <label>Drug Test Date</label>
    <type>Date</type>
</CustomField>