force-app/main/default/objects/Drug_Test_History__c/fields/Drug_Test_Location__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test_Location__c</fullName>
    <description>Removed from layout in Jan 2019.</description>
    <label>Drug Test Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>External Facility</fullName>
            </value>
            <value>
                <fullName>Previous Admissions/Onboarding Screen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>