force-app/main/default/objects/Drug_Test_History__c/fields/Drug_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test_Type__c</fullName>
    <description>As part of incoming participant data cleanup efforts in Jan 2019, &quot;Core Admissions Screen&quot; and &quot;Social Enterprise Onboarding Screen&quot; were combined into one option called &quot;Initial Recruitment Screen&quot;. A new option &quot;Recruitment Retest&quot; was also created due to new drug testing policies regarding marijuana.</description>
    <label>Drug Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Recruitment Screen</fullName>
            </value>
            <value>
                <fullName>Random</fullName>
            </value>
            <value>
                <fullName>Behavior-Based</fullName>
            </value>
            <value>
                <fullName>Interview Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>