force-app/main/default/objects/Drug_Test_History__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Scheduling</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Positive - Marijuana Only</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
                <label>Positive - Other</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>Pending Result</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>