force-app/main/default/objects/Drug_Test_History__c/fields/Results_Date__c.field-meta.xml
<CustomField>
    <fullName>Results_Date__c</fullName>
    <description>As of Jan 2019 incoming participant data cleanup, &apos;Drug Test Date&apos; is the only date field inputted and on layout.</description>
    <label>x Results Date</label>
    <type>Date</type>
</CustomField>