force-app/main/default/objects/Drug_Test_History__c/fields/Service_Entry__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Entry</label>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipLabel>Drug Test History</relationshipLabel>
    <relationshipName>Drug_Test_History</relationshipName>
    <type>Lookup</type>
</CustomField>